# deeproot

./: .gitignore  LICENSE  LICENSE.md  README.md  README2.md  acerca.py  artfactos.py  install.sh  main.py  pyproject.toml  requirements.txt  test.py  theme.py  uninstall.sh  uninstall.sh.back
docs/: Guia del Instalador de DeepRoot.md  Guía Técnica Script de Instalación de DeepRoot.md
modules/: instrucciones.py  interfaz.py  openai_utils.py  themes.py
scripts/: deeproot_install.sh  deeproot_uninstall.sh
src/: acerca.py  generar_lanzador.py  install.py  main.py
src/modules/: deeproot.py  instrucciones.py  interfaz.py  themes.py  utilidades.py
